Vertically align slider headings on mobile viewports by setting fixed top padding

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -991,3 +991,11 @@ header .navbar .cta-btn2 .nav-link:hover span {
     filter: blur(0);
   }
 }
+
+/* Ensure headings align vertically across all slides on mobile viewports */
+@media (max-width: 991.98px) {
+  .owl-carousel.home-slider .slider-item .slider-text {
+    align-items: flex-start !important;
+    padding-top: 150px !important;
+  }
+}
